# Molecular-similarity

./: .dockerignore  .env.example  .gitignore  Dockerfile  ETL_QUICKSTART.md  Molecular-similarity.code-workspace  README.md  README_NEW.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
.venv-ci/: pyvenv.cfg
challenges/: README.md  ideas-for-next-work.md  major-bugs-and-fixes.md  project-challenges.md
data/: chembl.db  chembl_modeling.csv
data/chembl_small/: 5ht2b_activities.json  5ht2b_target.json  cyp2d6_activities.json  cyp2d6_target.json  herg_activities.json  herg_target.json  summary.json
decisions/: README.md  why-auroc.md  why-chembl.md  why-docker.md  why-etl-not-elt.md  why-sql.md  why-these-models.md
exploration/: README.md
exploration/reports/: baseline_models.json  baseline_models.md  chembl_baseline_models.json  chembl_baseline_models.md  dataset_index.csv  dataset_index.json  dataset_index.md  dataset_overview.html  dataset_summary.json  dataset_summary.md  linear_regression_baseline.json  linear_regression_baseline.md  prepared_dataset.csv  prepared_dataset.json  prepared_dataset.md  similarity_threshold_model.json  similarity_threshold_model.md  sql_activity_pair_model.json  sql_activity_pair_model.md
scripts/: build_dataset_index.py  download_chembl_dataset.py  etl_pipeline.py  explore_dataset.py  generate_pipeline_figure.py  prepare_dataset.py  run_chembl_baseline_models.py  run_linear_regression_baseline.py  run_similarity_threshold_model.py  run_sql_activity_pair_model.py
sql/: schema.sql
src/molecular_similarity/: __init__.py  chembl_baseline_models.py  linear_regression_baseline.py  metrics.py  sql_activity_model.py  threshold_model.py
tests/: test_build_dataset_index.py  test_etl_pipeline.py  test_prepare_dataset.py  test_run_linear_regression_baseline.py  test_run_similarity_threshold_model.py  test_run_sql_activity_pair_model.py  test_version.py
