[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molecular-similarity"
version = "0.1.0"
description = "Tools and experiments for molecular similarity workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "rdkit>=2026.3",
  "scikit-learn>=1.4",
  "umap-learn>=0.5",
]

[project.scripts]
molecular-similarity-linear-baseline = "molecular_similarity.linear_regression_baseline:main"
molecular-similarity-sql-activity-model = "molecular_similarity.sql_activity_model:main"
molecular-similarity-threshold-model = "molecular_similarity.threshold_model:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
